Correções no site

--- a/pt/projects/index.html
+++ b/pt/projects/index.html
@@ -136,8 +136,7 @@
         <div class="portfolio-content">
             <h2 id="coder-portfolio">Coder Portfolio</h2>
 
-<p>hugo-coderを元に作成しました。<br />
-より自分を伝えられるようにしました。</p>
+<p>Este tema é criado com base no hugo-coder.</p>
 
         </div>
 	</div>
@@ -160,7 +159,7 @@
     
       <p>Made with ♥ by Alika - © 2019 ALIKA</p>
     
-     © 3007    ·  Powered by <a href="https://alika.net.br/">Alika</a> & <a href="https://thimotti.github.io/">David Thimotti</a>. 
+     © 16007    ·  Powered by <a href="https://alika.net.br/">Alika</a> & <a href="https://thimotti.github.io/">David Thimotti</a>. 
 
   </section>
 </footer>
