--- a/contact/index.html
+++ b/contact/index.html
@@ -121,7 +121,7 @@
 
 <h2 id="want-contact">Want Contact?</h2>
 
-<p>Have questions or suggestions? Feel free to <a href="https://github.com/naro143/hugo-coder-portfolio/issues/new">open an issue on GitHub</a> or <a href="https://twitter.com/naro143">ask me on Twitter</a>.</p>
+<p>Have questions? <a href="https://twitter.com/thimotti/">Ask me on Twitter</a>.</p>
 
   </article>
 </section>
@@ -140,7 +140,7 @@
     
       <p>Made with ♥ by Alika - © 2019 ALIKA</p>
     
-     © 3007    ·  Powered by <a href="https://alika.net.br/">Alika</a> & <a href="https://thimotti.github.io/">David Thimotti</a>. 
+     © 16007    ·  Powered by <a href="https://alika.net.br/">Alika</a> & <a href="https://thimotti.github.io/">David Thimotti</a>. 
 
   </section>
 </footer>
