--- a/about/index.html
+++ b/about/index.html
@@ -146,7 +146,7 @@
     
       <p>Made with ♥ by Alika</p>
     
-     © 2019    ·  Powered by <a href="https://alika.net.br/">Alika Soluções</a> & <a href="https://thimotti.github.io/">David Thimotti</a>. 
+     © 2019    ·  <a href="https://alika.net.br/">Alika Soluções</a>. 
 
   </section>
 </footer>
