--- a/pt/about/index.html
+++ b/pt/about/index.html
@@ -121,7 +121,7 @@
 
 <p>Meu nome é David Thimotti e moro em Belo Horizonte, Brasil. Atualmente, estou trabalhando como analista na Alika Soluções. Sou tecnólogo em redes de computadores, com  especialização em telecomunicações e redes de computadores pelo Centro Universitário Estácio de Belo Horizonte.</p>
 
-<p>Estou interessado em engenharia de software em geral: estruturas de dados, algoritmos, protocolos, arquitetura, padrões de design e muito mais. Além disso, trabalho com redes de computadores corporativas. Recentemente, comecei a me envolver mais na comunidade de código aberto, participando de encontros e conferências e, claro, contribuindo. E no meu tempo livre, gosto de jogar games, ler livros e assistir a filmes e séries.</p>
+<p>Estou interessado em engenharia de software em geral: estruturas de dados, algoritmos, protocolos, arquitetura, padrões de design e muito mais. Além disso, trabalho com redes de computadores corporativas. Recentemente, comecei a me envolver mais na comunidade de código aberto. E no meu tempo livre, gosto de jogar games, ler livros e assistir a filmes e séries.</p>
 
 <p>Então, este é o meu blog, um projeto pessoal, onde pretendo documentar meus estudos em programação e tecnologia em geral. Eu desejo que você possa aprender alguma coisa aqui. Se você quiser ficar em contato, deixe um comentário ou entre em contato comigo pelo Twitter. Verifique meus projetos no <a href="https://github.com/thimotti">Github</a>.</p>
 
