--- a/about/index.html
+++ b/about/index.html
@@ -121,7 +121,7 @@
 
 <p>My name is David Thimotti and I live in Belo Horizonte, Brazil. Currently, I’m working as an analyst at Alika Solutions. I have a technologist’s degree in computer networks and a telecommunications and computer networks specialization at the Centro Universitário Estácio de Belo Horizonte.</p>
 
-<p>I’m interested in software engineering in general: Data structures, algorithms, protocols, architecture, design patterns and much more. Also, I work with corporate computer networks. Just recently, I started to engage more in the open source community, attending to meetups and conferences, and, of course, contributing. And in my spare time, I like to play games, read books, and watch movies and series.</p>
+<p>I’m interested in software engineering in general: Data structures, algorithms, protocols, architecture, design patterns and much more. Also, I work with corporate computer networks. Just recently, I started to engage more in the open source community. And in my spare time, I like to play games, read books, and watch movies and series.</p>
 
 <p>So, this is my blog, a personal project, where I intend to document my studies in programming and technology in general. I wish you can learn something from here. If you want to stay in touch, leave a comment or reach me at Twitter. Check out my projects at <a href="https://github.com/thimotti">Github</a>.</p>
 
